# alien-works-android-runtime

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
alien-works-android/: build.gradle
alien-works-android/ecl/: .gitignore  build-android.sh  build-asdf-system.sh  build-host.sh
alien-works-android/ecl/aux/: epilogue.lisp  prologue.lisp
alien-works-android/ecl/utils/: build-common.lisp  build-common.sh  build-system.lisp  collect-sources.lisp  init.lisp
alien-works-android/jni/: AlienWorksNative.h  CMakeLists.txt  main.c
alien-works-android/src/androidTest/java/org/borodust/alienworks/android/: ExampleInstrumentedTest.kt
alien-works-android/src/main/: AndroidManifest.xml
alien-works-android/src/main/java/org/borodust/alienworks/android/: AlienWorksActivity.kt  AlienWorksNative.java
alien-works-android/src/test/java/org/borodust/alienworks/android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
